--- a/src/i18n/en.json
+++ b/src/i18n/en.json
@@ -3,9 +3,8 @@
   "fallback": null,
   "name": "English",
   "translations": {
-    "welcome": "WelcomeRace",
-    "hello $1": "Hello $1",
-    "counter": "Counter",
-    "WelcomeRace": ""
+    "welcome": "Bienvenue",
+    "hello $1": "Hello Minster $1",
+    "counter": "Counter"
   }
 }
